[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/EnemyFlying.gd" type="Script" id=2]
[ext_resource path="res://assets/wing.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 45 )

[sub_resource type="Animation" id=3]
resource_name = "Bobbing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("./LeftWingSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("./RightWingSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("./RightWingSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -72, -72 ), Vector2( -72, -48 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("./LeftWingSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, -72 ), Vector2( 72, -48 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("./Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -64 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("./RightWingSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -72, -72 ), Vector2( -72, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("./RightWingSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 120.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("./LeftWingSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, -72 ), Vector2( 72, -120 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("./LeftWingSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("./Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, 720 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("./RightWingSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("./LeftWingSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("StompArea/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48, 40 )

[node name="EnemyFlying" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="LeftWingSprite" type="Sprite" parent="."]
position = Vector2( 72, -72 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="RightWingSprite" type="Sprite" parent="."]
position = Vector2( -72, -72 )
scale = Vector2( -0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -50, 0, 100, -60 )
process_parent = true
physics_process_parent = true

[node name="StompArea" type="Area2D" parent="."]
position = Vector2( 0, -45 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
modulate = Color( 0.14902, 0, 1, 1 )
position = Vector2( 0, -30 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bobbing"
anims/Bobbing = SubResource( 3 )
anims/Die = SubResource( 4 )

[node name="AreaDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetector"]
position = Vector2( 0, -48 )
shape = SubResource( 5 )
[connection signal="body_entered" from="StompArea" to="." method="_on_StompArea_body_entered"]
[connection signal="area_entered" from="AreaDetector" to="." method="_on_AreaDetector_area_entered"]
[connection signal="area_exited" from="AreaDetector" to="." method="_on_AreaDetector_area_exited"]
